--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -4,3 +4,14 @@
 .example-spacer {
   flex: 1 1 auto;
 }
+
+.select {
+  opacity: 0.75;
+  font-size: 0.75em;
+}
+
+span a {
+  text-decoration: none;
+  color: #FFF;
+  text-transform: uppercase;
+}
